<resources>
    <string name="detail_name">Weather Detail</string>
    <string name="empty"></string>
    <string name="demo_name">Weather App</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_network">Please Connect to internet and try again later.</string>
    <string name="server_error">Could not connect to server, try again later.</string>
    <string name="no_data">No data available, try again later.</string>
    <string name="weather_url">https://api.forecast.io/forecast/%1$s/%2$s,%3$s</string>
    <string name="weather_base_url">https://api.forecast.io/forecast/</string>
    <string name="permission_denied">Permission for fetching location denied.</string>

    <!-- Weather Parameters -->
    <string name="weather_heading">Weather</string>
    <string name="degcelcius">%1$s°C</string>
    <string name="degfaran">°F</string>
    <string name="milesperhour">mph</string>
    <string name="low">Low:</string>
    <string name="high">High:</string>
    <string name="morning">Morning:</string>
    <string name="evening">Evening:</string>
    <string name="night">Night:</string>
    <string name="winds">Wind:</string>
    <string name="condition">Condition:</string>
    <string name="today">TODAY</string>

    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="dew_point">Dew Point</string>
    <string name="ozone">Ozone</string>
    <string name="max">Max</string>
    <string name="min">Min</string>

    <string name="not_available">N/A</string>
    <string name="action_settings">Settings</string>
    <string name="null_location">Unable to Fetch Location</string>
</resources>
